# tasg

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yaml
src/: cli.rs  error.rs  lib.rs  main.rs  store.rs  task.rs
tests/: cli.rs
